Use Math.clamp, fix parameter name